tests/snapshots/integration_tests__snapshot_tests__array_tiling_poly2.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_poly2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (* i+0 i+0) 2)) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (- (Read_Int_Int a+0 i+0) 2)) 1) (Read_Int_Int a+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (* i+0 i+0) 2)) 1) (Read_Int_Int a+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (* i+0 i+0) 2)) i+4) (Read_Int_Int a+0 i+4))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (* i+0 i+0) 2)) i+0) (+ (* i+0 i+0) 2))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (+ (* i+0 i+0) 2)) S) (Read_Int_Int a+0 S))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (- (Read_Int_Int a+0 i+0) 2)) i+0) (- (Read_Int_Int a+0 i+0) 2))",
    ],
}
