tests/snapshots/integration_tests__snapshot_tests__array_tiling_pr4.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_pr4.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) val2+0) Z) (Read_Int_Int a2+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) val1+0) Z) (Read_Int_Int a3+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) 0) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) (- (* 4 i+0) 3)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) (- (* 4 i+0) 3)) val3+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) 3) (Read_Int_Int a1+0 3))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) val1+0) (- (* 4 i+0) 1)) val1+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) 0) (- (* 4 i+0) 1)) (Read_Int_Int a+0 (- (* 4 i+0) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) Z) (Read_Int_Int a1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) val2+0) (- (* 4 i+0) 1)) (Read_Int_Int a2+0 (- (* 4 i+0) 1)))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) val2+0) (- (* 4 i+0) 2)) val2+0)",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) 0) (- (* 4 i+0) 1)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) 0) (Read_Int_Int a1+0 0))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) val2+0) 7) (Read_Int_Int a2+0 7))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) val1+0) 7) (Read_Int_Int a3+0 7))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) val2+0) 3) (Read_Int_Int a2+0 3))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) val4+0) 3) (Read_Int_Int a+0 3))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) val4+0) (- (* 4 i+0) 4)) val4+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) 0) 7) (Read_Int_Int a1+0 7))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) 0) (- (* 4 i+0) 4)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) val4+0) 7) (Read_Int_Int a+0 7))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) minval+0) (Read_Int_Int a1+0 minval+0))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) 0) 3) (Read_Int_Int a2+0 3))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) 3) (Read_Int_Int a1+0 3))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) 7) (Read_Int_Int a1+0 7))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 4 i+0) 2) 0) (- (* 4 i+0) 2)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 4 i+0) 3) val3+0) Z) (Read_Int_Int a1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 4 i+0) 4) val4+0) minval+1) (Read_Int_Int a+0 minval+1))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) 0) 7) (Read_Int_Int a3+0 7))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 4 i+0) 1) 0) Z) (Read_Int_Int a3+0 Z))",
    ],
}
