tests/snapshots/integration_tests__snapshot_tests__array_tiling_pr5.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_pr5.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) val4+0) minval+1) (Read_Int_Int a1+0 minval+1))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) 0) minval+1) (Read_Int_Int a4+0 minval+1))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) val2+0) minval+1) (Read_Int_Int a3+0 minval+1))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) val3+0) minval+1) (Read_Int_Int a2+0 minval+1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) val5+0) (- (* 5 i+0) 5)) val5+0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) 0) minval+1) (Read_Int_Int a+0 minval+1))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) val4+0) i+1) (Read_Int_Int a1+0 i+1))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) 0) i+1) (Read_Int_Int a4+0 i+1))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) 0) i+1) (Read_Int_Int a3+0 i+1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) 0) i+1) (Read_Int_Int a+0 i+1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) 0) (- (* 5 i+0) 5)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) val3+0) (- (* 5 i+0) 3)) val3+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) 0) 3) (Read_Int_Int a1+0 3))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) 0) 3) (Read_Int_Int a4+0 3))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) 0) 3) (Read_Int_Int a2+0 3))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) val5+0) 2) (Read_Int_Int a+0 2))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) val5+0) minval+0) (Read_Int_Int a+0 minval+0))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) 0) 2) (Read_Int_Int a3+0 2))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) 0) (- (* 5 i+0) 3)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) 0) (- (* 5 i+0) 2)) (Read_Int_Int a1+0 (- (* 5 i+0) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) 0) (- (* 5 i+0) 2)) (Read_Int_Int a+0 (- (* 5 i+0) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) 0) Z) (Read_Int_Int a4+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) val2+0) Z) (Read_Int_Int a3+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) val2+0) (- (* 5 i+0) 2)) val2+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) val4+0) val2+0) (Read_Int_Int a1+0 val2+0))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) val5+0) val2+0) (Read_Int_Int a+0 val2+0))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) 0) val5+0) (Read_Int_Int a4+0 val5+0))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) 0) (- (* 5 i+1) 2)) (Read_Int_Int a4+0 (- (* 5 i+1) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) val3+0) val2+0) (Read_Int_Int a2+0 val2+0))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) 0) val2+0) (Read_Int_Int a4+0 val2+0))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) val2+0) val5+0) (Read_Int_Int a3+0 val5+0))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) 0) (- (* 5 i+0) 2)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) val1+0) minval+1) (Read_Int_Int a4+0 minval+1))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) val1+0) (- (* 5 i+1) 2)) (Read_Int_Int a4+0 (- (* 5 i+1) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) 0) (- (* 5 i+1) 2)) (Read_Int_Int a3+0 (- (* 5 i+1) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) val1+0) 3) (Read_Int_Int a4+0 3))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) 0) Z) (Read_Int_Int a2+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) val1+0) (+ i+0 1)) (Read_Int_Int a4+0 (+ i+0 1)))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) val1+0) (- (* 5 i+0) 1)) val1+0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) 0) Z) (Read_Int_Int a1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) val3+0) Z) (Read_Int_Int a2+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) val3+0) (- (* 5 i+1) 2)) (Read_Int_Int a2+0 (- (* 5 i+1) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) 0) (- (* 5 i+0) 1)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) val1+0) Z) (Read_Int_Int a4+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) val2+0) (- (* 5 i+1) 2)) (Read_Int_Int a3+0 (- (* 5 i+1) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) 0) (- (* 5 i+1) 2)) (Read_Int_Int a1+0 (- (* 5 i+1) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) 0) (- (* 5 i+1) 2)) (Read_Int_Int a+0 (- (* 5 i+1) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) val5+0) (- (* 5 i+1) 2)) (Read_Int_Int a+0 (- (* 5 i+1) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) val5+0) val1+0) (Read_Int_Int a+0 val1+0))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) 0) (- (* 5 i+0) 4)) 0)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) val4+0) (- (* 5 i+1) 2)) (Read_Int_Int a1+0 (- (* 5 i+1) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) val4+0) (- (* 5 i+0) 4)) val4+0)",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) 0) CC) (Read_Int_Int a4+0 CC))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) val4+0) Z) (Read_Int_Int a1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) 0) (- (* 5 i+1) 2)) (Read_Int_Int a2+0 (- (* 5 i+1) 2)))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) 0) CC) (Read_Int_Int a3+0 CC))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) 0) Z) (Read_Int_Int a3+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) 0) minval+1) (Read_Int_Int a2+0 minval+1))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) 0) minval+1) (Read_Int_Int a3+0 minval+1))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) 0) 1) (Read_Int_Int a4+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) 0) CC) (Read_Int_Int a2+0 CC))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) 0) Z) (Read_Int_Int a+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) val2+0) 1) (Read_Int_Int a3+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) 0) 1) (Read_Int_Int a3+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a4+0 (- (* 5 i+0) 1) val1+0) 1) (Read_Int_Int a4+0 1))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 (- (* 5 i+0) 4) val4+0) CC) (Read_Int_Int a1+0 CC))",
        "(= (Read_Int_Int (Write_Int_Int a3+0 (- (* 5 i+0) 2) val2+0) i+1) (Read_Int_Int a3+0 i+1))",
        "(= (Read_Int_Int (Write_Int_Int a+0 (- (* 5 i+0) 5) 0) 0) (Read_Int_Int a+0 0))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) 0) val1+0) (Read_Int_Int a2+0 val1+0))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) 0) 2) (Read_Int_Int a2+0 2))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) 0) val1+1) (Read_Int_Int a2+0 val1+1))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) 0) i+0) (Read_Int_Int a2+0 i+0))",
        "(= (Read_Int_Int (Write_Int_Int a2+1 (- (* 5 i+1) 3) val3+1) i+0) (Read_Int_Int a2+1 i+0))",
        "(= (Read_Int_Int (Write_Int_Int a2+0 (- (* 5 i+0) 3) val3+0) val5+0) (Read_Int_Int a2+0 val5+0))",
        "(= (Read_Int_Int (Write_Int_Int a1+1 (- (* 5 i+1) 4) 0) i+0) (Read_Int_Int a1+1 i+0))",
    ],
}
